kubernetes/ingresses/bazarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: subtitles.dpinhas.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port: 
              number: 6767
