kubernetes/ingresses/transmission-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: download.dpinhas.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port: 
              number: 9091
